相手の駒はつかめないように修正

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "url": "web-game-backend"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
