--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@types/node": "^22.13.11",
+    "jest": "^29.7.0",
+    "prisma": "^6.5.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   }
 }
